# DeckOfCards

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  variables.env
docker/: Dockerfile
include/: Deck.hpp
src/: Deck.cpp
test/: CMakeLists.txt  DeckTest.cpp
